--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Famous Touch Massage Services",
-      "image": "https://www.famous-touch.com/famous-touch-logo.png",
+      "image": "https://www.famous-touch.com/famous-touch-logo.jpg",
       "@id": "https://www.famous-touch.com/",
       "url": "https://www.famous-touch.com/",
       "telephone": "+639466266795",
@@ -108,7 +108,6 @@
             background: transparent;
         }
         
-        /* HEADER LOGO (Original Style) */
         .logo img {
             width: 100%;
             max-width: 160px;
@@ -242,19 +241,19 @@
             object-fit: cover;
         }
 
-        /* NEW WATERMARK LOGO STYLE (Removes background from JPG) */
+        /* UPDATED SLIDE LOGO: Larger, No background box, No border */
         .slide-logo {
             position: absolute;
             top: 15px;
             left: 15px;
-            width: 110px; 
+            width: 120px; /* Made it bigger */
             height: auto; 
             z-index: 5;
             background: transparent !important; 
             border: none !important; 
             box-shadow: none !important;
             padding: 0;
-            mix-blend-mode: multiply; /* Makes the white background transparent */
+            mix-blend-mode: multiply; /* Removes the white background from the jpg */
             filter: contrast(110%);
         }
 
@@ -401,7 +400,6 @@
             z-index: 10002;
         }
 
-        /* RESTORED ORIGINAL FLOATING CONTACT BUTTONS */
         .floating-btns { position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 999; }
         .floating-btns a { width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow:0 6px 15px rgba(0,0,0,.4); transition: transform 0.3s; }
         .whatsapp { background: #25D366 }
