--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Famous Touch Massage Services",
-      "image": "https://www.famous-touch.com/famous-touch-logo.jpg",
+      "image": "https://www.famous-touch.com/famous-touch-logo.png",
       "@id": "https://www.famous-touch.com/",
       "url": "https://www.famous-touch.com/",
       "telephone": "+639466266795",
@@ -108,6 +108,7 @@
             background: transparent;
         }
         
+        /* HEADER LOGO */
         .logo img {
             width: 100%;
             max-width: 160px;
@@ -241,19 +242,19 @@
             object-fit: cover;
         }
 
-        /* UPDATED SLIDE LOGO: Larger, No background box, No border */
+        /* WATERMARK LOGO STYLE */
         .slide-logo {
             position: absolute;
             top: 15px;
             left: 15px;
-            width: 120px; /* Made it bigger */
+            width: 120px; 
             height: auto; 
             z-index: 5;
             background: transparent !important; 
             border: none !important; 
             box-shadow: none !important;
             padding: 0;
-            mix-blend-mode: multiply; /* Removes the white background from the jpg */
+            mix-blend-mode: multiply; 
             filter: contrast(110%);
         }
 
@@ -400,6 +401,7 @@
             z-index: 10002;
         }
 
+        /* FLOATING CONTACT BUTTONS */
         .floating-btns { position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 999; }
         .floating-btns a { width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow:0 6px 15px rgba(0,0,0,.4); transition: transform 0.3s; }
         .whatsapp { background: #25D366 }
@@ -414,7 +416,7 @@
 
     <header class="hero">
         <div class="logo">
-            <img src="famous-touch-logo.jpg" alt="Famous Touch Header Logo">
+            <img src="famous-touch-logo.png" alt="Famous Touch Header Logo">
         </div>
         <h1>Famous Touch</h1>
         <p><strong>24/7 Premium Home & Hotel Massage</strong></p>
@@ -473,22 +475,22 @@
         <h2 class="gallery-title">Service Gallery</h2>
         <div class="service-slideshow">
             <div class="slide-wrap active">
-                <img src="famous-touch-logo.jpg" class="slide-logo" alt="Watermark Logo">
+                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
                 <img src="swedish-massage.jpg" alt="Swedish Massage">
                 <div class="caption">Swedish Massage</div>
             </div>
             <div class="slide-wrap">
-                <img src="famous-touch-logo.jpg" class="slide-logo" alt="Watermark Logo">
+                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
                 <img src="deep-tissue.jpg" alt="Deep Tissue">
                 <div class="caption">Deep Tissue</div>
             </div>
             <div class="slide-wrap">
-                <img src="famous-touch-logo.jpg" class="slide-logo" alt="Watermark Logo">
+                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
                 <img src="foot-massage.jpg" alt="Foot Massage">
                 <div class="caption">Foot Massage</div>
             </div>
             <div class="slide-wrap">
-                <img src="famous-touch-logo.jpg" class="slide-logo" alt="Watermark Logo">
+                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
                 <img src="combination.jpg" alt="Combination Massage">
                 <div class="caption">Combination Massage</div>
             </div>
