--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             background: transparent;
         }
         
-        /* HEADER LOGO */
         .logo img {
             width: 100%;
             max-width: 160px;
@@ -212,7 +211,6 @@
         .promise-sub { font-weight: 500; font-size: 14px; opacity: 0.9; line-height: 1.3; color: #222; }
         .custom-list svg { flex-shrink: 0; margin-top: 3px; }
 
-        /* SLIDESHOW STYLES */
         .gallery-wrapper {
             margin-bottom: 30px;
             padding: 0;
@@ -242,7 +240,6 @@
             object-fit: cover;
         }
 
-        /* WATERMARK LOGO STYLE */
         .slide-logo {
             position: absolute;
             top: 15px;
@@ -401,7 +398,6 @@
             z-index: 10002;
         }
 
-        /* FLOATING CONTACT BUTTONS */
         .floating-btns { position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 999; }
         .floating-btns a { width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow:0 6px 15px rgba(0,0,0,.4); transition: transform 0.3s; }
         .whatsapp { background: #25D366 }
@@ -466,6 +462,34 @@
                 <div class="promise-content">
                     <span class="promise-title">Truly 24/7 Availability</span>
                     <span class="promise-sub">Late-night stress relief? Early morning recovery? We come to you anytime.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Wide Range of Expert Techniques</span>
+                    <span class="promise-sub">Swedish, Deep Tissue, Thai, Combination, Foot, Twin & more.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Fast Relief from Pain & Tension</span>
+                    <span class="promise-sub">Say goodbye to back/neck pain, jet lag, or daily stress.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Private & Professional Service</span>
+                    <span class="promise-sub">No crowded spas, no awkward waiting — total privacy in your room.</span>
+                </div>
+            </li>
+            <li>
+                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+                <div class="promise-content">
+                    <span class="promise-title">Perfect for Solo or Shared Sessions</span>
+                    <span class="promise-sub">Enjoy alone or book Twin Massage for double the relaxation.</span>
                 </div>
             </li>
         </ul>
@@ -546,28 +570,26 @@
 </div>
 
 <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.slide-wrap');
+    /* Slideshow Logic */
+    const wraps = document.querySelectorAll('.slide-wrap');
     const dots = document.querySelectorAll('.slide-dots span');
+    let currentIndex = 0;
 
-    function showSlide(n) {
-        if(!slides.length) return;
-        slides.forEach(s => s.classList.remove('active'));
-        dots.forEach(d => d.classList.remove('active'));
-        currentSlide = (n + slides.length) % slides.length;
-        slides[currentSlide].classList.add('active');
-        dots[currentSlide].classList.add('active');
+    function nextSlide() {
+        wraps[currentIndex].classList.remove('active');
+        dots[currentIndex].classList.remove('active');
+        currentIndex = (currentIndex + 1) % wraps.length;
+        wraps[currentIndex].classList.add('active');
+        dots[currentIndex].classList.add('active');
     }
-    if(slides.length) setInterval(() => showSlide(currentSlide + 1), 4000);
+    setInterval(nextSlide, 4000);
 
+    /* Map Modal Logic */
     function openMap() {
-        document.getElementById("mapModal").style.display = "flex";
-        document.body.style.overflow = "hidden"; 
+        document.getElementById('mapModal').style.display = 'flex';
     }
-
     function closeMap() {
-        document.getElementById("mapModal").style.display = "none";
-        document.body.style.overflow = "auto"; 
+        document.getElementById('mapModal').style.display = 'none';
     }
 </script>
 
