--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="famous-touch-logo.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="famous-touch-logo.jpg">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T21K1ZMPND"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -24,7 +27,7 @@
       "@context": "https://schema.org",
       "@type": "HealthAndBeautyBusiness",
       "name": "Famous Touch Massage Services",
-      "image": "https://www.famous-touch.com/famous-touch-logo.png",
+      "image": "https://www.famous-touch.com/famous-touch-logo.jpg",
       "@id": "https://www.famous-touch.com/",
       "url": "https://www.famous-touch.com/",
       "telephone": "+639466266795",
@@ -332,72 +335,6 @@
             background: linear-gradient(90deg, transparent, var(--primary), transparent);
             margin-bottom: 15px;
         }
-        .map-logo-link {
-            display: inline-block;
-            margin: 15px 0;
-            text-decoration: none;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-        .map-logo-link:hover { transform: scale(1.1); }
-        .map-logo-img {
-            width: 55px;
-            height: 55px;
-            background: #fff;
-            padding: 8px;
-            border-radius: 12px;
-            border: 2px solid var(--primary);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-        }
-        .map-label {
-            display: block;
-            color: var(--primary);
-            font-weight: 800;
-            font-size: 11px;
-            margin-top: 5px;
-            text-transform: uppercase;
-        }
-
-        .map-modal {
-            display: none;
-            position: fixed;
-            z-index: 10000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.9);
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-        .modal-content {
-            position: relative;
-            max-width: 95%;
-            max-height: 90vh;
-            border: 3px solid var(--primary);
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 0 30px var(--primary);
-            background: #000;
-        }
-        .modal-content img {
-            width: 100%;
-            max-height: 85vh;
-            display: block;
-            object-fit: contain;
-        }
-        .close-btn {
-            position: absolute;
-            top: -5px;
-            right: 10px;
-            color: var(--primary);
-            font-size: 45px;
-            font-weight: bold;
-            cursor: pointer;
-            z-index: 10002;
-        }
-
         .floating-btns { position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 999; }
         .floating-btns a { width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow:0 6px 15px rgba(0,0,0,.4); transition: transform 0.3s; }
         .whatsapp { background: #25D366 }
@@ -412,7 +349,7 @@
 
     <header class="hero">
         <div class="logo">
-            <img src="famous-touch-logo.png" alt="Famous Touch Header Logo">
+            <img src="famous-touch-logo.jpg" alt="Famous Touch Header Logo">
         </div>
         <h1>Famous Touch</h1>
         <p><strong>24/7 Premium Home & Hotel Massage</strong></p>
@@ -471,27 +408,6 @@
                     <span class="promise-sub">Swedish, Deep Tissue, Thai, Combination, Foot, Twin & more.</span>
                 </div>
             </li>
-            <li>
-                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
-                <div class="promise-content">
-                    <span class="promise-title">Fast Relief from Pain & Tension</span>
-                    <span class="promise-sub">Say goodbye to back/neck pain, jet lag, or daily stress.</span>
-                </div>
-            </li>
-            <li>
-                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
-                <div class="promise-content">
-                    <span class="promise-title">Private & Professional Service</span>
-                    <span class="promise-sub">No crowded spas, no awkward waiting — total privacy in your room.</span>
-                </div>
-            </li>
-            <li>
-                <svg width="20" height="20" fill="var(--primary)" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
-                <div class="promise-content">
-                    <span class="promise-title">Perfect for Solo or Shared Sessions</span>
-                    <span class="promise-sub">Enjoy alone or book Twin Massage for double the relaxation.</span>
-                </div>
-            </li>
         </ul>
     </section>
 
@@ -499,29 +415,11 @@
         <h2 class="gallery-title">Service Gallery</h2>
         <div class="service-slideshow">
             <div class="slide-wrap active">
-                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
+                <img src="famous-touch-logo.jpg" class="slide-logo" alt="Watermark Logo">
                 <img src="swedish-massage.jpg" alt="Swedish Massage">
                 <div class="caption">Swedish Massage</div>
             </div>
-            <div class="slide-wrap">
-                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
-                <img src="deep-tissue.jpg" alt="Deep Tissue">
-                <div class="caption">Deep Tissue</div>
             </div>
-            <div class="slide-wrap">
-                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
-                <img src="foot-massage.jpg" alt="Foot Massage">
-                <div class="caption">Foot Massage</div>
-            </div>
-            <div class="slide-wrap">
-                <img src="famous-touch-logo.png" class="slide-logo" alt="Watermark Logo">
-                <img src="combination.jpg" alt="Combination Massage">
-                <div class="caption">Combination Massage</div>
-            </div>
-            <div class="slide-dots">
-                <span class="active"></span><span></span><span></span><span></span>
-            </div>
-        </div>
     </div>
 
     <div class="testimonial-outer">
@@ -530,68 +428,21 @@
             <div class="testimonial-track">
                 <div class="testimonial"><div class="stars">★★★★★</div><strong>Anna M.</strong><br>Famous Touch is the best! Very professional.</div>
                 <div class="testimonial"><div class="stars">★★★★★</div><strong>Mark T.</strong><br>Highly reliable home service in Makati.</div>
-                <div class="testimonial"><div class="stars">★★★★★</div><strong>Sophia R.</strong><br>Very clean setup and polite staff.</div>
-                <div class="testimonial"><div class="stars">★★★★★</div><strong>James L.</strong><br>Perfect hotel service arrival.</div>
-                <div class="testimonial"><div class="stars">★★★★★</div><strong>Anna M.</strong><br>Famous Touch is the best! Very professional.</div>
             </div>
         </div>
     </div>
 
     <footer class="main-footer">
         <div class="footer-line"></div>
-        <p><strong>FAMOUS TOUCH MASSAGE SERVICES</strong></p>
-        <p style="color: var(--primary); font-weight: bold; margin: 10px 0 5px;">SERVICE AREA COVERAGE:</p>
-        <p style="opacity: 0.9; line-height: 1.6; margin-bottom: 5px;">
-            Pasay • Makati • BGC • Malate • Pasig • Parañaque
-        </p>
-
-        <div onclick="openMap()" class="map-logo-link">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/aa/Google_Maps_icon_%282020%29.svg" class="map-logo-img" alt="Map Icon">
-            <span class="map-label">View Coverage Map</span>
-        </div>
-
-        <p style="margin-top: 15px; opacity: 0.7; font-size: 11px;">
-            &copy; 2026 Famous Touch Massage. All Rights Reserved.
-        </p>
+        <p>© 2026 Famous Touch Massage. All rights reserved.</p>
     </footer>
 
 </div>
 
-<div id="mapModal" class="map-modal" onclick="closeMap()">
-    <div class="modal-content" onclick="event.stopPropagation()">
-        <span class="close-btn" onclick="closeMap()">&times;</span>
-        <img src="coverage-map.jpg" alt="Famous Touch Service Coverage Map">
-    </div>
-</div>
-
 <div class="floating-btns">
-    <a href="https://wa.me/639466266795" class="whatsapp" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
-    <a href="viber://chat?number=%2B639552442390" class="viber"><img src="https://img.icons8.com/ios-filled/50/ffffff/viber.png" alt="Viber"></a>
+    <a href="https://wa.me/639466266795" class="whatsapp" target="_blank"><img src="whatsapp-icon.png" alt="WhatsApp"></a>
+    <a href="viber://chat?number=%2B639466266795" class="viber"><img src="viber-icon.png" alt="Viber"></a>
 </div>
-
-<script>
-    /* Slideshow Logic */
-    const wraps = document.querySelectorAll('.slide-wrap');
-    const dots = document.querySelectorAll('.slide-dots span');
-    let currentIndex = 0;
-
-    function nextSlide() {
-        wraps[currentIndex].classList.remove('active');
-        dots[currentIndex].classList.remove('active');
-        currentIndex = (currentIndex + 1) % wraps.length;
-        wraps[currentIndex].classList.add('active');
-        dots[currentIndex].classList.add('active');
-    }
-    setInterval(nextSlide, 4000);
-
-    /* Map Modal Logic */
-    function openMap() {
-        document.getElementById('mapModal').style.display = 'flex';
-    }
-    function closeMap() {
-        document.getElementById('mapModal').style.display = 'none';
-    }
-</script>
 
 </body>
 </html>
