--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" href="famous-touch-logo.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="xVj3uxcWfu1sfd176MxjiioG-440_qDsYQTsM_rgy7g" />
+
+    <link rel="icon" type="image/png" sizes="48x48" href="https://www.famous-touch.com/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.famous-touch.com/apple-touch-icon.png">
+    
+    <link rel="canonical" href="https://www.famous-touch.com/" />
+
+    <title>Famous Touch | 24/7 Home & Hotel Massage Makati, Pasay, BGC</title>
+    <meta name="description" content="Famous Touch provides premium 24/7 home and hotel massage services in Makati, Pasay, BGC, Malate, and across Metro Manila. Professional, certified therapists delivered to your door.">
+    <meta name="keywords" content="massage makati, massage pasay, home service massage manila, hotel massage bgc, 24 hour massage malate, massage parañaque, massage pasig">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T21K1ZMPND"></script>
     <script>
@@ -13,16 +21,6 @@
       gtag('js', new Date());
       gtag('config', 'G-T21K1ZMPND');
     </script>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="xVj3uxcWfu1sfd176MxjiioG-440_qDsYQTsM_rgy7g" />
-
-    <title>Famous Touch | 24/7 Home & Hotel Massage Makati, Pasay, BGC</title>
-    <meta name="description" content="Famous Touch provides premium 24/7 home and hotel massage services in Makati, Pasay, BGC, Malate, and across Metro Manila. Professional, certified therapists delivered to your door.">
-    <meta name="keywords" content="massage makati, massage pasay, home service massage manila, hotel massage bgc, 24 hour massage malate, massage parañaque, massage pasig">
-    
-    <link rel="canonical" href="https://www.famous-touch.com/" />
 
     <script type="application/ld+json">
     {
