--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-T21K1ZMPND');
+      gtag('config', 'G-B7MXQNQWJJ');
     </script>
 
     <script type="application/ld+json">
